2014-12-XX Kevin Pellet ilphrin@autistici.org
    * Rules.py (elementary) : New function to play with elements
    * Field.py (drawElements) : New function to draw element's icon on each
      cases of the field. 
    * Card.py (addModifer) : New function to apply modifications to values
    * game.py (putCard) : Added elementary verification and cleaned code
                          Selected card now slowly translate to the center.
      (capturedAnimation) : Now re-draw the bonus when changing card's owner
      (showAbout) : Do not print width anymore.
                    Background color depends of card's owner
      (__init__) : Stopped launching directly main().
    * Menu.py (_load_translations) : It's now possible to use gettext for 
      doing your own translations.
      (hotSeat) : Run Application.main() now.
    * functions.py (configExists) : Changed the print output.
    * listOfcards.py : 6 Cards added.
    * Sound.py : New function to manage element sound effect.
    * Menu.py : New function to do an animation in the menu.

2014-09-14  Kevin Pellet ilphrin@autistici.org
    * Merged README.md, README.txt and INFO.txt into README
    * CHANGES : Changed format of the file.
    * images/ : Added image.txt
    * functions.py (checkPath) : New function to check the path name of config
      file.
      (configExist) : New function to create a config folder in /home
      (setConfig, readFile) : transfered file checking to configExist and
      checkPath.

2014-09-07  Kevin Pellet ilphrin@autistici.org
    * cards/ : 6 Cards added.
    * Field.py (saveState) : Function to save the state of the game.
    * Some code clean up.

2014-08-22  Kevin Pellet ilphrin@autistici.org
    * cards/ : Added elementaries on few Cards.
      Four new Cards, Clementine, Dosbox, Freemind and Wine
    * Menu.py (about) : Added Credits.
    * sounds/ : Added a new effect sound, when doing a clic on the Menu